@@ -6,7 +6,13 @@
 
 	* src/cerebrod/cerebrod_listener_data.c (cerebrod_monitor_module_destroy):
 	new function.
-	
+
+	* src/modules/clusterlist/cerebro_clusterlist_hostsfile.c
+	(hostsfile_clusterlist_node_in_cluster): Fix bug.
+
+	* src/modules/clusterlist/cerebro_clusterlist_hostsfile.c
+	(list_strcmp): New function.
+
 2006-02-27  Albert Chu  <chu11@llnl.gov>
 	
 	* src/cerebrod/cerebrod_speaker.c (cerebrod_send_heartbeat): Fix
